--- a/html/dealRecord.html
+++ b/html/dealRecord.html
@@ -400,10 +400,10 @@
                             <i class="user_ic"></i>
                             個人資料
                         </li>
-                        <li onclick="window.location.href='./vip.html'">
+                        <!-- <li onclick="window.location.href='./vip.html'">
                             <i class="vip_ic"></i>
                             VIP會員
-                        </li>
+                        </li> -->
                         <li onclick="window.location.href='./wallet.html'">
                             <i class="wallet_ic"></i>
                             我的錢包
