--- a/html/member.html
+++ b/html/member.html
@@ -609,7 +609,7 @@
                         <div class="smallBoard">
                             <div class="title">
                                 投注紀錄
-                                <p class="more">
+                                <p class="more" onclick="window.location.href='../html/betRecord.html'">
                                     更多
                                     <i class="arrow"></i>
                                 </p>
@@ -633,7 +633,7 @@
                         <div class="smallBoard">
                             <div class="title">
                                 優惠中心
-                                <p class="more">
+                                <p class="more" onclick="window.location.href='../html/eventApply.html'">
                                     更多
                                     <i class="arrow"></i>
                                 </p>
@@ -660,7 +660,7 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='../html/vip.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
                 </ul>
