--- a/html/withdrawal.html
+++ b/html/withdrawal.html
@@ -208,7 +208,7 @@
                     <li class="fishBtn" onclick="window.location.href='./fishPage.html'">捕魚機</li>
                     <li class="boardBtn" onclick="window.location.href='./boardPage.html'">棋牌遊戲</li>
                     <!-- <li class="activeWallet">活動錢包</li> -->
-                    <li class="event" onclick="window.location.href='./event.html'">優惠</li>
+                    <li class="event" onclick="window.location.href='./event.html'">優惠中心</li>
                 </ul>
             </div>
         </div>
@@ -399,10 +399,10 @@
                             <i class="user_ic"></i>
                             個人資料
                         </li>
-                        <li onclick="window.location.href='./vip.html'">
+                        <!-- <li onclick="window.location.href='./vip.html'">
                             <i class="vip_ic"></i>
                             VIP會員
-                        </li>
+                        </li> -->
                         <li onclick="window.location.href='./wallet.html'">
                             <i class="wallet_ic"></i>
                             我的錢包
@@ -612,7 +612,7 @@
                             <div class="smallBoard">
                                 <div class="title">
                                     提款紀錄
-                                    <p class="more">
+                                    <p class="more"  onclick="window.location.href='../html/dealRecord.html'">
                                         更多
                                         <i class="arrow"></i>
                                     </p>
@@ -664,9 +664,9 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='./html/vip.html'">優惠</li>
-                    <li class="title" onclick="window.location.href='./html/help.html'">幫助中心</li>
-                    <li class="title" onclick="window.location.href='./html/help.html'">關於我們</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
+                    <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
                 </ul>
             </div>
             <div class="footer-site">
@@ -996,19 +996,19 @@
             <ul class="content forHot display">
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">親愛的會員您好： 《I88》營運團隊在此重申打擊外掛的決心，同時也呼籲利用BUG、不法程式...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">★敬請注意★ 1.本公司對於任何個人或團體以外掛軟件程式同時在同一項目投注相同內容的注單...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">本公司為全台最大系統商，近日有不實謠言，惡意攻擊本公司造成名譽受損，本公司在此呼籲...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
