--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='./html/vip.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='./html/event.html'">優惠</li>
                     <li class="title" onclick="window.location.href='./html/help.html'">幫助中心</li>
                     <li class="title" onclick="window.location.href='./html/help.html'">關於我們</li>
                 </ul>
