--- a/html/bankCard.html
+++ b/html/bankCard.html
@@ -439,7 +439,7 @@
                                 <div class="content">
                                     <div class="title">
                                         <span>卡片管理</span>
-                                        <span>卡片數量0<span>/ 不限制</span></span>
+                                        <span>卡片數量2<span>/ 不限制</span></span>
                                     </div>
                                     <div class="cardBox">
                                         <div class="slider">
@@ -447,7 +447,7 @@
                                                 <div class="addCard_ic"></div>
                                                 <div class="text">請先綁定一張銀行卡，用於收款</div>
                                             </div>
-                                            <!-- <div class="card register">
+                                            <div class="card register">
                                                 <div class="name">上海銀行</div>
                                                 <div class="branch">上海</div>
                                                 <div class="account">
@@ -455,7 +455,7 @@
                                                 </div>
                                                 <p class="review">審核中</p>
                                             </div>
-                                            <div class="card register">
+                                            <!-- <div class="card register">
                                                 <div class="name">上海銀行</div>
                                                 <div class="branch">上海</div>
                                                 <div class="account">
@@ -548,7 +548,7 @@
                             <div class="smallBoard">
                                 <div class="title">
                                     投注紀錄
-                                    <p class="more">
+                                    <p class="more" onclick="window.location.href='../html/betRecord.html'">
                                         更多
                                         <i class="arrow"></i>
                                     </p>
@@ -572,7 +572,7 @@
                             <div class="smallBoard">
                                 <div class="title">
                                     優惠中心
-                                    <p class="more">
+                                    <p class="more" onclick="window.location.href='../html/eventApply.html'">
                                         更多
                                         <i class="arrow"></i>
                                     </p>
@@ -600,7 +600,7 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='../html/vip.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
                 </ul>
@@ -932,19 +932,19 @@
             <ul class="content forHot display">
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">親愛的會員您好： 《I88》營運團隊在此重申打擊外掛的決心，同時也呼籲利用BUG、不法程..</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">★敬請注意★ 1.本公司對於任何個人或團體以外掛軟件程式同時在同一項目投注相同內容的注..</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">本公司為全台最大系統商，近日有不實謠言，惡意攻擊本公司造成名譽受損，本公司在此呼籲...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
