--- a/html/wallet.html
+++ b/html/wallet.html
@@ -599,7 +599,7 @@
                             <div class="smallBoard">
                                 <div class="title">
                                     投注紀錄
-                                    <p class="more">
+                                    <p class="more" onclick="window.location.href='../html/betRecord.html'">
                                         更多
                                         <i class="arrow"></i>
                                     </p>
@@ -623,7 +623,7 @@
                             <div class="smallBoard">
                                 <div class="title">
                                     優惠中心
-                                    <p class="more">
+                                    <p class="more"  onclick="window.location.href='../html/eventApply.html'">
                                         更多
                                         <i class="arrow"></i>
                                     </p>
@@ -651,7 +651,7 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='../html/vip.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
                 </ul>
@@ -679,19 +679,19 @@
             <ul class="content forHot display">
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">親愛的會員您好： 《I88》營運團隊在此重申打擊外掛的決心，同時也呼籲利用BUG、不法程..</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">★敬請注意★ 1.本公司對於任何個人或團體以外掛軟件程式同時在同一項目投注相同內容的注..</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">本公司為全台最大系統商，近日有不實謠言，惡意攻擊本公司造成名譽受損，本公司在此呼籲...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
@@ -1023,7 +1023,7 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow walletRecord">
+        <!-- <div class="jumpWindow walletRecord">
             <div class="title">
                 <p>注單明細</p>
                 <i class="close_ic_gray"></i>
@@ -1041,7 +1041,7 @@
                 </table>
                 <p class="noData">目前無資料</p>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
