--- a/html/help.html
+++ b/html/help.html
@@ -298,169 +298,55 @@
                             </li>
                          </ul>
                          <ul class="fish">
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="../images/廠商圖/fish/fish_1.jpeg">
-                                 </div>
-                                 <p>魚樂無窮</p>
-                             </li>
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="../images/廠商圖/fish/fish_2.jpeg">
-                                 </div>
-                                 <p>捕魚</p>
-                             </li>
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="../images/廠商圖/fish/fish_3.jpg">
-                                 </div>
-                                 <p>霸王虞姬</p>
-                             </li>
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="../images/廠商圖/fish/fish_4.jpg">
-                                 </div>
-                                 <p>龍珠捕魚</p>
-                             </li>
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="../images/廠商圖/fish/fish_5.jpg">
-                                 </div>
-                                 <p>中國神魔捕魚</p>
-                             </li>
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="../images/廠商圖/fish/fish_6.jpg">
-                                 </div>
-                                 <p>中國神魔塔防</p>
-                             </li>
-                             <li onclick="openFishGame()">
-                                 <div>
-                                     <img src="">
-                                 </div>
-                                 <p>海霸王之八爪天下</p>
-                             </li>
+                            <li onclick="unlogin()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_1.png">
+                                </div>
+                                <p>鳳凰棋牌</p>
+                            </li>
+                            <li onclick="unlogin()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_2.png">
+                                </div>
+                                <p>RSG電子娛樂</p>
+                            </li>
+                            <li onclick="unlogin()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_3.png">
+                                </div>
+                                <p>必贏電子娛樂</p>
+                            </li>
+                            <li onclick="unlogin()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_4.png">
+                                </div>
+                                <p>RTG電子娛樂</p>
+                            </li>
+                            <li onclick="unlogin()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_5.png">
+                                </div>
+                                <p>SP電子娛樂</p>
+                            </li>
                          </ul>
                          <ul class="board">
-                             <li onclick="openBoardGame()">
+                            <li onclick="unlogin()">
                                 <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
+                                    <img src="../images/廠商圖/board/board_1.png">
                                 </div>
-                                <p>奪寶小靈猴</p>
+                                <p>PNG電子娛樂</p>
                             </li>
-                            <li onclick="openBoardGame()">
+                            <li onclick="unlogin()">
                                 <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
+                                    <img src="../images/廠商圖/board/board_2.png">
                                 </div>
-                                <p>三開德州撲克</p>
+                                <p>鳳凰棋牌</p>
                             </li>
-                            <li onclick="openBoardGame()">
+                            <li onclick="unlogin()">
                                 <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
+                                    <img src="../images/廠商圖/board/board_3.png">
                                 </div>
-                                <p>多手21點</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>蟲蟲派對</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>賭場Hold' em</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>賭場桩牌撲克</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>德賽斯野生</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>雙開式21點</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>歐洲21點</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>歐洲輪盤</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>飛翔小豬</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>累積獎金撲克</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>杰克高手</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>小丑撲克</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>迷你百家樂</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>財運之輪</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>雨林魔法賓果</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>單副牌21點</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>超級旋轉</p>
-                            </li>
-                            <li onclick="openBoardGame()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.jpeg">
-                                </div>
-                                <p>魔力小甜心賓果</p>
+                                <p>FUN GAME</p>
                             </li>
                          </ul>
                      </div>
@@ -900,9 +786,9 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='./html/vip.html'">優惠</li>
-                    <li class="title" onclick="window.location.href='./html/help.html'">幫助中心</li>
-                    <li class="title" onclick="window.location.href='./html/help.html'">關於我們</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
+                    <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
                 </ul>
             </div>
             <div class="footer-site">
@@ -1232,19 +1118,19 @@
             <ul class="content forHot display">
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">親愛的會員您好： 《I88》營運團隊在此重申打擊外掛的決心，同時也呼籲利用BUG、不法程式...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">★敬請注意★ 1.本公司對於任何個人或團體以外掛軟件程式同時在同一項目投注相同內容的注單...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">本公司為全台最大系統商，近日有不實謠言，惡意攻擊本公司造成名譽受損，本公司在此呼籲...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
