--- a/html/dealRecord.html
+++ b/html/dealRecord.html
@@ -208,8 +208,8 @@
                     <li class="fishBtn" onclick="window.location.href='./fishPage.html'">捕魚機</li>
                     <li class="boardBtn" onclick="window.location.href='./boardPage.html'">棋牌遊戲</li>
                     <!-- <li class="activeWallet">活動錢包</li> -->
-                    <li class="event" onclick="window.location.href='./event.html'">優惠</li>
-                    <li class="vip" onclick="window.location.href='./vip.html'">VIP會員</li>
+                    <li class="event" onclick="window.location.href='./event.html'">優惠中心</li>
+                    <!-- <li class="vip" onclick="window.location.href='./vip.html'">VIP會員</li> -->
                 </ul>
             </div>
         </div>
@@ -560,7 +560,7 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='../html/vip.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
                 </ul>
@@ -933,19 +933,19 @@
             <ul class="content forHot display">
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">親愛的會員您好： 《I88》營運團隊在此重申打擊外掛的決心，同時也呼籲利用BUG、不法程式...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">★敬請注意★ 1.本公司對於任何個人或團體以外掛軟件程式同時在同一項目投注相同內容的注單...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p class="text">公告測試</p>
+                        <p class="text">本公司為全台最大系統商，近日有不實謠言，惡意攻擊本公司造成名譽受損，本公司在此呼籲...</p>
                         <p class="date">2021/09/26</p>
                     </div>
                 </li>
@@ -987,9 +987,25 @@
                         <th>金額</th>
                         <th>日期</th>
                     </tr>
-                    <tr></tr>
+                    <tr>
+                        <td class="numTd">0952fa1c0b3a469b8a53223dfe6ec10e1</td>
+                        <td class="nameTd">BNG電子娛樂</td>
+                        <td class="money">40</td>
+                        <td class="timTd">2021-12-30 10:44:04</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">0952fa1c0b3a469b8a53223dfe6ec10e1</td>
+                        <td class="nameTd">BNG電子娛樂</td>
+                        <td class="money">40</td>
+                        <td class="timTd">2021-12-30 10:44:04</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">0952fa1c0b3a469b8a53223dfe6ec10e1</td>
+                        <td class="nameTd">BNG電子娛樂</td>
+                        <td class="money">40</td>
+                        <td class="timTd">2021-12-30 10:44:04</td>
+                    </tr>
                 </table>
-                <p class="noData">目前無資料</p>
             </div>
         </div>
     </div>
