--- a/html/deposit.html
+++ b/html/deposit.html
@@ -446,18 +446,49 @@
                                         <ul>
                                             <li class="active">
                                                 <i class="card_ic"></i>
-                                                超商儲值
+                                                銀行卡轉帳
+                                            </li>
+                                            <li>
+                                                <i class="atm_ic"></i>
+                                                ATM
                                             </li>
                                             <li>
                                                 <i class="shop_ic"></i>
-                                                網路ATM
+                                                超商代碼
                                             </li>
                                         </ul>
                                     </div>
                                     <i class="next"></i>
                                 </div>
                             </div>
-                            <div class="bottom">
+                            <div class="bottom display">
+                                <p class="title">銀行卡轉帳</p>
+                                <div class="content">
+                                    <form>
+                                        <div class="row">
+                                            <i>※</i>
+                                            選擇銀行
+                                            <select>
+                                                <option>上海商銀 - 41879</option>
+                                            </select>
+                                            <p class="remind">尾號:41879</p>
+                                        </div>
+                                        <div class="row">
+                                            <i>※</i>
+                                            存款金額
+                                            <input type="text">
+                                            <p class="remind">單筆存款金額1000~2000</p>
+                                        </div>
+                                        <button>確認送出</button>
+                                    </form>
+                                    <div class="remindBox">
+                                        <div class="title">重要提醒</div>
+                                        <div>1.存款帳戶需為本人的銀行帳戶，如為非本人的帳戶存款無法成功存款。</div>
+                                        <div>2.存款金額需與申請提交金額相同，如不相同會以實際入帳金額為主。</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bottom2">
                                 <p class="title">超商儲值</p>
                                 <div class="content">
                                     <form>
@@ -471,7 +502,33 @@
                                         <div class="row">
                                             <i>※</i>
                                             存款金額
-                                            <input type="text">
+                                            <input type="text"  value="請輸入充值金額">
+                                            <p class="remind">單筆存款金額1000~2000</p>
+                                        </div>
+                                        <button>確認送出</button>
+                                    </form>
+                                    <div class="remindBox">
+                                        <div class="title">重要提醒</div>
+                                        <div>1.存款帳戶需為本人的銀行帳戶，如為非本人的帳戶存款無法成功存款。</div>
+                                        <div>2.存款金額需與申請提交金額相同，如不相同會以實際入帳金額為主。</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bottom3">
+                                <p class="title">超商儲值</p>
+                                <div class="content">
+                                    <form>
+                                        <div class="row">
+                                            <i>※</i>
+                                            選擇銀行
+                                            <select>
+                                                <option>G超商</option>
+                                            </select>
+                                        </div>
+                                        <div class="row">
+                                            <i>※</i>
+                                            存款金額
+                                            <input type="text" value="請輸入充值金額">
                                             <p class="remind">單筆存款金額1000~2000</p>
                                         </div>
                                         <button>確認送出</button>
