--- a/html/help.html
+++ b/html/help.html
@@ -387,7 +387,7 @@
                             <ul>
                                 <li class="forQues_1">常見問題</li>
                                 <li class="forQues_2">遠端協助</li>
-                                <li class="forQues_3">聯絡我們</li>
+                                <!-- <li class="forQues_3">聯絡我們</li> -->
                             </ul>
                         </li>
                         <li class="title">
@@ -404,7 +404,23 @@
                                 <li class="forUs_3">責任博彩</li>
                                 <li class="forUs_4">安全性</li>
                                 <li class="forUs_5">免責聲明</li>
-                                <li class="forUs_6">相關規則</li>
+                                <li class="forUs_6">證照展示</li>
+                                <li class="forUs_7">存取款幫助</li>
+                                <li class="forUs_8">相關規則</li>
+                            </ul>
+                        </li>
+                        <li class="title">
+                            <p>
+                                <i class="dowl_p"></i>
+                                APP下載
+                            </p>
+                            <i class="arrow_ic"></i>
+                        </li>
+                        <li class="box">
+                            <ul>
+                                <li class="dLoad_1">歐博真人娛樂</li>
+                                <li class="dLoad_2">沙龍真人娛樂</li>
+                                <li class="dLoad_3">WM真人娛樂</li>
                             </ul>
                         </li>
                     </ul>
@@ -525,8 +541,6 @@
                         <p>填入提款金額即可進行提款。</p>
                         <p>申請提款後，提款金額將會鎖定。若無通過帳戶驗證，提款金額將回到中心錢包。提款前請確認帳戶資訊正確以避免提款失敗。</p>
                         <div class="img online02"></div>
-                        <p>NEWBIE.WITHDRAW.HOW.L1</p>
-                        <p>NEWBIE.WITHDRAW.HOW.L2</p>
                         <h2>提款常見問題</h2>
                         <p>Q:可以使用別人的銀行卡進行提款嗎？</p>
                         <p>A:爲了確保客戶的賬戶資金安全,提款需要使用遊戲,且提款銀行卡姓名必須與註冊姓名一致。</p>
@@ -603,14 +617,14 @@
                         <p>2.遠端協助程式使用完畢後即可關閉與卸載，無須擔心安全性問題。</p>
                         <p>3.可由客服或電腦工程人員爲您遠端操作電腦，妥善協助您查看並解決當前電腦或軟體問題。</p>
                     </div>
-                    <div class="question_3">
+                    <!-- <div class="question_3">
                         <h2>在線客服</h2>
                         <p>我們最親切且專業的客服人員，將全天24小時為您提供諮詢及幫助。</p>
                         <p>代理聯盟Line ID：Slot657</p>
                         <p>客服信箱：cstb588@gmail.com</p>
                         <p>客服Line ID：cs_5688</p>
                         <p>投訴信箱：tbcscomplaint@gmail.com</p>
-                    </div>
+                    </div> -->
                     <div class="aboutUs_1">
                         <h2>遵守會員規範及法律規定</h2>
                         <p>您瞭解您註冊成為會員後，即可使用本公司所提供之各項服務(以下稱本服務)。當會員使用本服務時，即表示除了同意遵守本服務條款外，還同意接受本公司對會員規範(包括各項遊戲規則、球賽投注規則、公告及注意事項等)及相關法令規定之拘束，本公司ALLBET所有產品與客戶服務、軟件系統、網絡架構等相關業務事宜，請使用本服務之會員請遵守使用者當地法令之許可，如有違反之情事恕非本服務之負責範圍。</p>
@@ -720,6 +734,15 @@
                         <p>網站內的部分資訊與其發布的日期和時間是相關的。所以，在特定日期時間之後，相關資訊可能已不再準確真實，通博(tb588)亦不承諾會更新該項目，因為其時效性而造成的損失，通博(tb588)亦不負任何責任。</p>
                     </div>
                     <div class="aboutUs_6">
+                        <div class="img license"></div>
+                    </div>
+                    <div class="aboutUs_7">
+                        <h2>存取款幫助</h2>
+                        <p>購點 如何購買點數到i88帳戶? 首先您需要透過代理推薦加入i88會員，在您註冊完成並與您的代理聯繫後，就可登入i88帳</p>
+                        <p>戶。 當您要購買本遊戲點數時，請先與代理聯繫，您的代理將會提供您最方便的購點服務。</p>
+                        <p>換點 我怎麼兌換我的點數呢？ 換點商品請您與代理聯繫，代理會提供您最優惠超值的換點項目。</p>
+                    </div>
+                    <div class="aboutUs_8">
                         <h2>一般條款和規則</h2>
                         <p>相關規則 請仔細閲讀以下您與通博(tb588)娛樂城有關的法律條款。請仔細閲讀並確保您能完全理解其內容。如果您對您條款約束的權利和義務有任何疑問，請向您所屬法律管轄區域內的法律顧問尋求說明。</p>
                         <p>1. 在註冊使用《規則與條款》涵蓋的通博(tb588) (統稱為＂通博(tb588)＂，＂tb588.net＂或＂網站＂)服務之前，請您確認您已年滿18歲或以上，您代表並保證您已閲讀，並充分理解和同意接受並遵守這些規則與條款。如果您不希望接受以下規則與條款，您絶不能登記和開立帳戶，您將無法訪問遊戲軟體和得到相應服務。</p>
@@ -766,6 +789,30 @@
                             <br>
                             最低投注，取決於不同的遊戲。適用於所有遊戲。
                         </p>
+                    </div>
+                    <div class="downLoad_1">
+                        <h2>相關說明</h2>
+                        <p>除了提供線上版本外，您也可以下載行動裝置版本，在您的手機盡情遊戲；或是下載安裝至您的電腦。</p>
+                        <p>當您要透過行動裝置或下載板 玩遊戲時，請注意，必須使用 個人資料 裡的 平台帳號密碼 才能進行登入。</p>
+                        <h2>如何登入</h2>
+                        <p>首次使用歐博APP登入，需先使用電腦版登入前台，進入電腦版歐博大廳，大廳右上角歐博APP入口處掃碼，進行設定手勢圖形密碼，此設定為一次性，後續登入可用手勢圖形密碼進入歐博APP</p>
+                       <button>下載APP</button>
+                    </div>
+                    <div class="downLoad_2">
+                        <h2>相關說明</h2>
+                        <p>除了提供線上版本外，您也可以下載行動裝置版本，在您的手機盡情遊戲；或是下載安裝至您的電腦。</p>
+                        <p>當您要透過行動裝置或下載板 玩遊戲時，請注意，必須使用 個人資料 裡的 平台帳號密碼 才能進行登入。</p>
+                        <h2>如何登入</h2>
+                        <p>首次使用歐博APP登入，需先使用電腦版登入前台，進入電腦版歐博大廳，大廳右上角歐博APP入口處掃碼，進行設定手勢圖形密碼，此設定為一次性，後續登入可用手勢圖形密碼進入歐博APP</p>
+                        <button>下載APP</button>
+                    </div>
+                    <div class="downLoad_3">
+                        <h2>相關說明</h2>
+                        <p>除了提供線上版本外，您也可以下載行動裝置版本，在您的手機盡情遊戲；或是下載安裝至您的電腦。</p>
+                        <p>當您要透過行動裝置或下載板 玩遊戲時，請注意，必須使用 個人資料 裡的 平台帳號密碼 才能進行登入。</p>
+                        <h2>如何登入</h2>
+                        <p>首次使用歐博APP登入，需先使用電腦版登入前台，進入電腦版歐博大廳，大廳右上角歐博APP入口處掃碼，進行設定手勢圖形密碼，此設定為一次性，後續登入可用手勢圖形密碼進入歐博APP</p>
+                        <button>下載APP</button>
                     </div>
                 </div>
             </div>
