--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div>
                             <i class="pass_ic"></i>
                             <input type="password" placeholder="密碼">
-                            <i class="forget"></i>
+                            <!-- <i class="forget"></i> -->
                         </div>
                         <button class="loginBtn" type="button">登入</button>
                     </form>
@@ -39,8 +39,8 @@
                     <i class="register_ic"></i>
                     註冊
                 </li>
-                <li class="loginPart register" onclick="window.open('./html/register.html')">
-                    <i class="register_ic"></i>
+                <li class="loginPart forget">
+                    <i class="forget_ic"></i>
                     忘記密碼
                 </li>
                 <li class="infoPart">
