--- a/html/register.html
+++ b/html/register.html
@@ -16,7 +16,63 @@
     <main>
         <div class="registerWrap">
             <div class="bigBox">
-                <div class="left">
+                <div class="top">
+                    <div class="title">
+                        <div class="logo"></div>
+                        <i class="photo"></i>
+                    註冊
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="left">
+                        <label>
+                            <input type="text" placeholder="請輸入帳號">
+                            <p class="err">帳號須包含一個英文字母(大小寫皆可);最少六個字元</p>
+                        </label>
+                        <label>
+                            <input type="password" placeholder="請輸入密碼">
+                            <p class="err">數字英文,及限定的特殊符號(@._$#%^&*+-)可使用</p>
+                            <i class="eye"></i>
+                        </label>
+                        <label>
+                            <input type="password" placeholder="密碼確認">
+                        </label>
+                        <label>
+                            <input type="text" placeholder="LINE ID" class="linebar">
+                            <ul class="platformChs">
+                                <li class="line display">
+                                    <span></span>
+                                </li>
+                                <li class="wechat">
+                                    <span></span>
+                                </li>
+                            </ul>
+                        </label>
+                        <button class="intoBtn" onclick="window.location.href='../index.html'">進入逛逛</button>
+                    </div>
+                    <div class="right">
+                        <label>
+                            <input type="text" placeholder="真實姓名">
+                        </label>
+                        <label>
+                            <input type="text" placeholder="手機">
+                            <button class="verification-btn">取得驗證碼</button>
+                        </label>
+                        <label>
+                            <input type="text" placeholder="手機驗證碼">
+                        </label>
+                        <label>
+                            <input type="text" placeholder="邀請碼">
+                        </label>
+                        <p class="tips">所有欄位必填，Line與WeChat則一填寫即可</p>
+                        <div class="checkBox">
+                            <input type="checkbox">
+                            <p>已閱讀並同意<span>相關條款與隱私政策</span></p>
+                        </div>
+                        <button class="checkBtn disable">確認</button>
+                    </div>
+                </div>
+                <!-- <div class="left">
                     <img src="../images/icon/svg/logo.svg">
                 </div>
                 <form class="right">
@@ -52,7 +108,8 @@
                         <p>已閱讀並同意<span>相關條款與隱私政策</span></p>
                     </div>
                     <button class="checkBtn">確認</button>
-                </form>
+                </form> -->
+            
             </div>
         </div>
     </main>
