--- a/html/mail.html
+++ b/html/mail.html
@@ -465,7 +465,7 @@
                                         <span class="title">這是已讀信</span>
                                         <span class="date">2021-09-26</span>
                                     </li>
-                                    <li>
+                                    <li class="notRead">
                                         <span class="title">這是未讀信</span>
                                         <span class="date">2021-09-26</span>
                                     </li>
