--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./js/javascript.js"></script>
 </head>
-<body onload="currentTime()">
+<body>
     <header>
         <div class="top">
             <span class="brad">
